# SAM2_codegen

./: .gitignore  README.md  generate_report.py
manual_cpp/: CMakeLists.txt  main.cpp  sam2.cpp  sam2.h  sam2_decoder.cpp  sam2_hiera.cpp  sam2_ops.cpp
matlab_coder/: benchmark_matlab_coder.m  loadSAM2.m  run_benchmark.m  run_codegen.m  run_codegen_bg.m  run_timing.m  sam2_infer.m  verify_codegen.m
matlab_coder/outDir/: benchmark_main.cpp  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  sam2_infer.cpp  sam2_infer.h  sam2_infer_data.h  sam2_infer_initialize.cpp  sam2_infer_initialize.h  sam2_infer_rtw.mk  sam2_infer_terminate.cpp  sam2_infer_terminate.h  sam2_infer_types.h
matlab_coder/outDir/examples/: main.cpp  main.h
matlab_coder/outDir/html/: report.mldatx
matlab_coder/outDir/interface/: _coder_sam2_infer_api.cpp  _coder_sam2_infer_api.h  _coder_sam2_infer_info.cpp  _coder_sam2_infer_info.h  _coder_sam2_infer_mex.cpp  _coder_sam2_infer_mex.h
reference/: extract_weights.py  gen_reference.py  io_meta.json
webapp/: index.html
